--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,42 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #565656 #F2FDFF;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #F2FDFF;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #F2FCFF;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #F2FCFF;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #565656;
+  border: 4px solid #FFFFFF;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #707070;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #1E1E1E;
+}
+
