--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -1,10 +1,14 @@
 .ProseMirror {
-  transition: background-color 0.3s ease, color 0.3s ease;
-  outline: none;
-  font-family: 'Inter', sans-serif;
-  font-size: 1.125rem;
+  min-height: 350px;
+  max-width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: white;
+  color: #111827;
   line-height: 1.6;
-  padding: 0.75rem;
+  font-size: 1rem;
+  outline: none;
+  transition: all 0.2s ease-in-out;
 }
 
 .ProseMirror a {
@@ -56,8 +60,13 @@
 }
 
 .ProseMirror img {
-  position: relative;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0.5rem auto;
+  border-radius: 0.5rem;
 }
+
 
 .ProseMirror .drag-handle {
   position: absolute;
@@ -72,30 +81,37 @@
 
 
 .ProseMirror ul {
-  list-style-type: disc; /* default bullet */
+  list-style-type: disc;
+  /* default bullet */
   margin-left: 1.25rem;
 }
 
 .ProseMirror ul ul {
-  list-style-type: circle; /* second level nested bullet */
+  list-style-type: circle;
+  /* second level nested bullet */
 }
 
 .ProseMirror ul ul ul {
-  list-style-type: square; /* third level nested bullet */
+  list-style-type: square;
+  /* third level nested bullet */
 }
 
 .ProseMirror ol {
-  list-style-type: decimal; /* default numbering */
+  list-style-type: decimal;
+  /* default numbering */
   margin-left: 1.25rem;
 }
 
 .ProseMirror ol ol {
-  list-style-type: lower-alpha; /* second level */
+  list-style-type: lower-alpha;
+  /* second level */
 }
 
 .ProseMirror ol ol ol {
-  list-style-type: lower-roman; /* third level */
+  list-style-type: lower-roman;
+  /* third level */
 }
+
 .ProseMirror li {
   margin-bottom: 0.5rem;
   line-height: 1.6;
@@ -105,5 +121,6 @@
 .dark .ProseMirror ul,
 .dark .ProseMirror ol,
 .dark .ProseMirror li {
-  color: #d1d5db; /* Tailwind gray-300 */
+  color: #d1d5db;
+  /* Tailwind gray-300 */
 }
